# cogent-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
assets/: CLAUDE.md
assets/commands/: review-pr.md
assets/skills/code-review/: SKILL.md  code-review
config/: claude_settings.json  nats.conf
docker/: Dockerfile
examples/: web_client.html
hooks/: notification.sh  post_tool_use.sh  pre_tool_use.sh  publish_event.sh  session_start.sh
scripts/: entrypoint.sh
src/: __init__.py
src/agent/: __init__.py  auth.py  config.py  core.py  health.py  main.py  orchestrator.py  project_agent.py
src/cli/: __init__.py  client.py  main.py
src/communication/: __init__.py  nats_handler.py  websocket_gateway.py
src/github/: __init__.py  git_manager.py  github_client.py  test_runner.py  workflow.py
src/skills/: __init__.py  manager.py
tests/: __init__.py  test_auth.py  test_cli_client.py  test_config.py  test_core.py  test_integration.py  test_nats_handler.py
